# templates

./: .versions  Makefile  README.md  shell.nix
bash-jail-ubuntu24.04/: Makefile
bash-jail-ubuntu24.04/challenge/: Dockerfile  challenge.bash  entrypoint.sh  setup_entrypoint.sh
bash-nojail-ubuntu24.04/: Makefile
bash-nojail-ubuntu24.04/challenge/: Dockerfile  challenge.bash  entrypoint.sh
flask-instanced-alpine3.21/: Makefile
flask-nojail-alpine3.21/: Makefile  Manifest.yaml
flask-nojail-alpine3.21/challenge/: Dockerfile  entrypoint.sh
offline/: Makefile  Manifest.yaml
offline-dynamic-python/: Makefile  Manifest.yaml
offline-dynamic-python/solution/: Dockerfile  encrypted.b64  exploit  pyproject.toml
patches/: Makefile.patch  README.md.patch  flake.lock.patch  flake.nix.patch  shell.nix.patch
php-instanced-ubuntu24.04/: Makefile
php-nojail-ubuntu24.04/: Makefile  Manifest.yaml
phpxss-nojail-ubuntu24.04/: Makefile
pwn-jail-alpine3.21/: Makefile
pwn-jail-debian12/: Makefile
pwn-jail-debian12.11/: Makefile  Manifest.yaml
pwn-jail-ubuntu24.04/: Makefile  Manifest.yaml
pwn-nojail-alpine3.21/: Makefile
pwn-nojail-ubuntu24.04/: Makefile
pwn-qemu-kernel/: Makefile
python3.12-jail-alpine3.21/: Makefile
python3.12-jail-ubuntu24.04/: Makefile  Manifest.yaml
python3.12-nojail-alpine3.21/: Makefile
python3.12-nojail-ubuntu24.04/: Makefile  Manifest.yaml
rust-nojail-alpine3.21/: Makefile
rust-nojail-ubuntu24.04/: Makefile  Manifest.yaml
sagemath-nojail-ubuntu22.04/: Makefile
solidity-nojail-debian11/: Makefile
(+136 files in other folders)
